Prevodjenje programskih jezika/brojevi/resenje/parser.output
State 5 conflicts: 1 reduce/reduce
State 18 conflicts: 1 reduce/reduce
State 39 conflicts: 1 shift/reduce, 1 reduce/reduce


Grammar

    0 $accept: Program $end

    1 Program: Naredba ';' Program
    2        | Naredba ';'

    3 Naredba: print_token '(' E ',' broj_token ')'
    4        | print_token '(' id_token ')'
    5        | print_token '(' E ')'
    6        | print_token '(' L ')'
    7        | int_token id_token '=' E
    8        | int_token id_token
    9        | list_token id_token '=' L
   10        | list_token id_token
   11        | id_token '=' E
   12        | id_token '=' L
   13        | E eq_token E
   14        | E neq_token E
   15        | E
   16        | L

   17 E: E '+' E
   18  | E '-' E
   19  | E '*' E
   20  | E '/' E
   21  | E '^' E
   22  | '-' E
   23  | E shl_token E
   24  | E shr_token E
   25  | E '&' E
   26  | E '|' E
   27  | '~' E
   28  | '(' E ')'
   29  | L '[' E ']'
   30  | id_token
   31  | broj_token

   32 L: '[' Lista_brojeva ']'
   33  | id_token

   34 Lista_brojeva: Lista_brojeva ',' E
   35              | E


Terminals, with rules where they appear

$end (0) 0
'&' (38) 25
'(' (40) 3 4 5 6 28
')' (41) 3 4 5 6 28
'*' (42) 19
'+' (43) 17
',' (44) 3 34
'-' (45) 18 22
'/' (47) 20
';' (59) 1 2
'=' (61) 7 9 11 12
'[' (91) 29 32
']' (93) 29 32
'^' (94) 21
'|' (124) 26
'~' (126) 27
error (256)
print_token (258) 3 4 5 6
int_token (259) 7 8
list_token (260) 9 10
eq_token (261) 13
neq_token (262) 14
broj_token <broj_type> (263) 3 31
id_token <string_type> (264) 4 7 8 9 10 11 12 30 33
shr_token (265) 24
shl_token (266) 23
UMINUS (267)


Nonterminals, with rules where they appear

$accept (28)
    on left: 0
Program (29)
    on left: 1 2, on right: 0 1
Naredba (30)
    on left: 3 4 5 6 7 8 9 10 11 12 13 14 15 16, on right: 1 2
E <broj_type> (31)
    on left: 17 18 19 20 21 22 23 24 25 26 27 28 29 30 31, on right:
    3 5 7 11 13 14 15 17 18 19 20 21 22 23 24 25 26 27 28 29 34 35
L <list_type> (32)
    on left: 32 33, on right: 6 9 12 16 29
Lista_brojeva <list_type> (33)
    on left: 34 35, on right: 32 34


State 0

    0 $accept: . Program $end

    print_token  shift, and go to state 1
    int_token    shift, and go to state 2
    list_token   shift, and go to state 3
    broj_token   shift, and go to state 4
    id_token     shift, and go to state 5
    '-'          shift, and go to state 6
    '~'          shift, and go to state 7
    '('          shift, and go to state 8
    '['          shift, and go to state 9

    Program  go to state 10
    Naredba  go to state 11
    E        go to state 12
    L        go to state 13


State 1

    3 Naredba: print_token . '(' E ',' broj_token ')'
    4        | print_token . '(' id_token ')'
    5        | print_token . '(' E ')'
    6        | print_token . '(' L ')'

    '('  shift, and go to state 14


State 2

    7 Naredba: int_token . id_token '=' E
    8        | int_token . id_token

    id_token  shift, and go to state 15


State 3

    9 Naredba: list_token . id_token '=' L
   10        | list_token . id_token

    id_token  shift, and go to state 16


State 4

   31 E: broj_token .

    $default  reduce using rule 31 (E)


State 5

   11 Naredba: id_token . '=' E
   12        | id_token . '=' L
   30 E: id_token .
   33 L: id_token .

    '='  shift, and go to state 17

    ';'       reduce using rule 30 (E)
    ';'       [reduce using rule 33 (L)]
    '['       reduce using rule 33 (L)
    $default  reduce using rule 30 (E)


State 6

   22 E: '-' . E

    broj_token  shift, and go to state 4
    id_token    shift, and go to state 18
    '-'         shift, and go to state 6
    '~'         shift, and go to state 7
    '('         shift, and go to state 8
    '['         shift, and go to state 9

    E  go to state 19
    L  go to state 20


State 7

   27 E: '~' . E

    broj_token  shift, and go to state 4
    id_token    shift, and go to state 18
    '-'         shift, and go to state 6
    '~'         shift, and go to state 7
    '('         shift, and go to state 8
    '['         shift, and go to state 9

    E  go to state 21
    L  go to state 20


State 8

   28 E: '(' . E ')'

    broj_token  shift, and go to state 4
    id_token    shift, and go to state 18
    '-'         shift, and go to state 6
    '~'         shift, and go to state 7
    '('         shift, and go to state 8
    '['         shift, and go to state 9

    E  go to state 22
    L  go to state 20


State 9

   32 L: '[' . Lista_brojeva ']'

    broj_token  shift, and go to state 4
    id_token    shift, and go to state 18
    '-'         shift, and go to state 6
    '~'         shift, and go to state 7
    '('         shift, and go to state 8
    '['         shift, and go to state 9

    E              go to state 23
    L              go to state 20
    Lista_brojeva  go to state 24


State 10

    0 $accept: Program . $end

    $end  shift, and go to state 25


State 11

    1 Program: Naredba . ';' Program
    2        | Naredba . ';'

    ';'  shift, and go to state 26


State 12

   13 Naredba: E . eq_token E
   14        | E . neq_token E
   15        | E .
   17 E: E . '+' E
   18  | E . '-' E
   19  | E . '*' E
   20  | E . '/' E
   21  | E . '^' E
   23  | E . shl_token E
   24  | E . shr_token E
   25  | E . '&' E
   26  | E . '|' E

    eq_token   shift, and go to state 27
    neq_token  shift, and go to state 28
    shr_token  shift, and go to state 29
    shl_token  shift, and go to state 30
    '|'        shift, and go to state 31
    '^'        shift, and go to state 32
    '&'        shift, and go to state 33
    '+'        shift, and go to state 34
    '-'        shift, and go to state 35
    '*'        shift, and go to state 36
    '/'        shift, and go to state 37

    $default  reduce using rule 15 (Naredba)


State 13

   16 Naredba: L .
   29 E: L . '[' E ']'

    '['  shift, and go to state 38

    $default  reduce using rule 16 (Naredba)


State 14

    3 Naredba: print_token '(' . E ',' broj_token ')'
    4        | print_token '(' . id_token ')'
    5        | print_token '(' . E ')'
    6        | print_token '(' . L ')'

    broj_token  shift, and go to state 4
    id_token    shift, and go to state 39
    '-'         shift, and go to state 6
    '~'         shift, and go to state 7
    '('         shift, and go to state 8
    '['         shift, and go to state 9

    E  go to state 40
    L  go to state 41


State 15

    7 Naredba: int_token id_token . '=' E
    8        | int_token id_token .

    '='  shift, and go to state 42

    $default  reduce using rule 8 (Naredba)


State 16

    9 Naredba: list_token id_token . '=' L
   10        | list_token id_token .

    '='  shift, and go to state 43

    $default  reduce using rule 10 (Naredba)


State 17

   11 Naredba: id_token '=' . E
   12        | id_token '=' . L

    broj_token  shift, and go to state 4
    id_token    shift, and go to state 18
    '-'         shift, and go to state 6
    '~'         shift, and go to state 7
    '('         shift, and go to state 8
    '['         shift, and go to state 9

    E  go to state 44
    L  go to state 45


State 18

   30 E: id_token .
   33 L: id_token .

    ';'       reduce using rule 30 (E)
    ';'       [reduce using rule 33 (L)]
    '['       reduce using rule 33 (L)
    $default  reduce using rule 30 (E)


State 19

   17 E: E . '+' E
   18  | E . '-' E
   19  | E . '*' E
   20  | E . '/' E
   21  | E . '^' E
   22  | '-' E .
   23  | E . shl_token E
   24  | E . shr_token E
   25  | E . '&' E
   26  | E . '|' E

    $default  reduce using rule 22 (E)


State 20

   29 E: L . '[' E ']'

    '['  shift, and go to state 38


State 21

   17 E: E . '+' E
   18  | E . '-' E
   19  | E . '*' E
   20  | E . '/' E
   21  | E . '^' E
   23  | E . shl_token E
   24  | E . shr_token E
   25  | E . '&' E
   26  | E . '|' E
   27  | '~' E .

    $default  reduce using rule 27 (E)


State 22

   17 E: E . '+' E
   18  | E . '-' E
   19  | E . '*' E
   20  | E . '/' E
   21  | E . '^' E
   23  | E . shl_token E
   24  | E . shr_token E
   25  | E . '&' E
   26  | E . '|' E
   28  | '(' E . ')'

    shr_token  shift, and go to state 29
    shl_token  shift, and go to state 30
    '|'        shift, and go to state 31
    '^'        shift, and go to state 32
    '&'        shift, and go to state 33
    '+'        shift, and go to state 34
    '-'        shift, and go to state 35
    '*'        shift, and go to state 36
    '/'        shift, and go to state 37
    ')'        shift, and go to state 46


State 23

   17 E: E . '+' E
   18  | E . '-' E
   19  | E . '*' E
   20  | E . '/' E
   21  | E . '^' E
   23  | E . shl_token E
   24  | E . shr_token E
   25  | E . '&' E
   26  | E . '|' E
   35 Lista_brojeva: E .

    shr_token  shift, and go to state 29
    shl_token  shift, and go to state 30
    '|'        shift, and go to state 31
    '^'        shift, and go to state 32
    '&'        shift, and go to state 33
    '+'        shift, and go to state 34
    '-'        shift, and go to state 35
    '*'        shift, and go to state 36
    '/'        shift, and go to state 37

    $default  reduce using rule 35 (Lista_brojeva)


State 24

   32 L: '[' Lista_brojeva . ']'
   34 Lista_brojeva: Lista_brojeva . ',' E

    ','  shift, and go to state 47
    ']'  shift, and go to state 48


State 25

    0 $accept: Program $end .

    $default  accept


State 26

    1 Program: Naredba ';' . Program
    2        | Naredba ';' .

    print_token  shift, and go to state 1
    int_token    shift, and go to state 2
    list_token   shift, and go to state 3
    broj_token   shift, and go to state 4
    id_token     shift, and go to state 5
    '-'          shift, and go to state 6
    '~'          shift, and go to state 7
    '('          shift, and go to state 8
    '['          shift, and go to state 9

    $default  reduce using rule 2 (Program)

    Program  go to state 49
    Naredba  go to state 11
    E        go to state 12
    L        go to state 13


State 27

   13 Naredba: E eq_token . E

    broj_token  shift, and go to state 4
    id_token    shift, and go to state 18
    '-'         shift, and go to state 6
    '~'         shift, and go to state 7
    '('         shift, and go to state 8
    '['         shift, and go to state 9

    E  go to state 50
    L  go to state 20


State 28

   14 Naredba: E neq_token . E

    broj_token  shift, and go to state 4
    id_token    shift, and go to state 18
    '-'         shift, and go to state 6
    '~'         shift, and go to state 7
    '('         shift, and go to state 8
    '['         shift, and go to state 9

    E  go to state 51
    L  go to state 20


State 29

   24 E: E shr_token . E

    broj_token  shift, and go to state 4
    id_token    shift, and go to state 18
    '-'         shift, and go to state 6
    '~'         shift, and go to state 7
    '('         shift, and go to state 8
    '['         shift, and go to state 9

    E  go to state 52
    L  go to state 20


State 30

   23 E: E shl_token . E

    broj_token  shift, and go to state 4
    id_token    shift, and go to state 18
    '-'         shift, and go to state 6
    '~'         shift, and go to state 7
    '('         shift, and go to state 8
    '['         shift, and go to state 9

    E  go to state 53
    L  go to state 20


State 31

   26 E: E '|' . E

    broj_token  shift, and go to state 4
    id_token    shift, and go to state 18
    '-'         shift, and go to state 6
    '~'         shift, and go to state 7
    '('         shift, and go to state 8
    '['         shift, and go to state 9

    E  go to state 54
    L  go to state 20


State 32

   21 E: E '^' . E

    broj_token  shift, and go to state 4
    id_token    shift, and go to state 18
    '-'         shift, and go to state 6
    '~'         shift, and go to state 7
    '('         shift, and go to state 8
    '['         shift, and go to state 9

    E  go to state 55
    L  go to state 20


State 33

   25 E: E '&' . E

    broj_token  shift, and go to state 4
    id_token    shift, and go to state 18
    '-'         shift, and go to state 6
    '~'         shift, and go to state 7
    '('         shift, and go to state 8
    '['         shift, and go to state 9

    E  go to state 56
    L  go to state 20


State 34

   17 E: E '+' . E

    broj_token  shift, and go to state 4
    id_token    shift, and go to state 18
    '-'         shift, and go to state 6
    '~'         shift, and go to state 7
    '('         shift, and go to state 8
    '['         shift, and go to state 9

    E  go to state 57
    L  go to state 20


State 35

   18 E: E '-' . E

    broj_token  shift, and go to state 4
    id_token    shift, and go to state 18
    '-'         shift, and go to state 6
    '~'         shift, and go to state 7
    '('         shift, and go to state 8
    '['         shift, and go to state 9

    E  go to state 58
    L  go to state 20


State 36

   19 E: E '*' . E

    broj_token  shift, and go to state 4
    id_token    shift, and go to state 18
    '-'         shift, and go to state 6
    '~'         shift, and go to state 7
    '('         shift, and go to state 8
    '['         shift, and go to state 9

    E  go to state 59
    L  go to state 20


State 37

   20 E: E '/' . E

    broj_token  shift, and go to state 4
    id_token    shift, and go to state 18
    '-'         shift, and go to state 6
    '~'         shift, and go to state 7
    '('         shift, and go to state 8
    '['         shift, and go to state 9

    E  go to state 60
    L  go to state 20


State 38

   29 E: L '[' . E ']'

    broj_token  shift, and go to state 4
    id_token    shift, and go to state 18
    '-'         shift, and go to state 6
    '~'         shift, and go to state 7
    '('         shift, and go to state 8
    '['         shift, and go to state 9

    E  go to state 61
    L  go to state 20


State 39

    4 Naredba: print_token '(' id_token . ')'
   30 E: id_token .
   33 L: id_token .

    ')'  shift, and go to state 62

    ')'       [reduce using rule 30 (E)]
    ')'       [reduce using rule 33 (L)]
    '['       reduce using rule 33 (L)
    $default  reduce using rule 30 (E)


State 40

    3 Naredba: print_token '(' E . ',' broj_token ')'
    5        | print_token '(' E . ')'
   17 E: E . '+' E
   18  | E . '-' E
   19  | E . '*' E
   20  | E . '/' E
   21  | E . '^' E
   23  | E . shl_token E
   24  | E . shr_token E
   25  | E . '&' E
   26  | E . '|' E

    shr_token  shift, and go to state 29
    shl_token  shift, and go to state 30
    '|'        shift, and go to state 31
    '^'        shift, and go to state 32
    '&'        shift, and go to state 33
    '+'        shift, and go to state 34
    '-'        shift, and go to state 35
    '*'        shift, and go to state 36
    '/'        shift, and go to state 37
    ','        shift, and go to state 63
    ')'        shift, and go to state 64


State 41

    6 Naredba: print_token '(' L . ')'
   29 E: L . '[' E ']'

    ')'  shift, and go to state 65
    '['  shift, and go to state 38


State 42

    7 Naredba: int_token id_token '=' . E

    broj_token  shift, and go to state 4
    id_token    shift, and go to state 18
    '-'         shift, and go to state 6
    '~'         shift, and go to state 7
    '('         shift, and go to state 8
    '['         shift, and go to state 9

    E  go to state 66
    L  go to state 20


State 43

    9 Naredba: list_token id_token '=' . L

    id_token  shift, and go to state 67
    '['       shift, and go to state 9

    L  go to state 68


State 44

   11 Naredba: id_token '=' E .
   17 E: E . '+' E
   18  | E . '-' E
   19  | E . '*' E
   20  | E . '/' E
   21  | E . '^' E
   23  | E . shl_token E
   24  | E . shr_token E
   25  | E . '&' E
   26  | E . '|' E

    shr_token  shift, and go to state 29
    shl_token  shift, and go to state 30
    '|'        shift, and go to state 31
    '^'        shift, and go to state 32
    '&'        shift, and go to state 33
    '+'        shift, and go to state 34
    '-'        shift, and go to state 35
    '*'        shift, and go to state 36
    '/'        shift, and go to state 37

    $default  reduce using rule 11 (Naredba)


State 45

   12 Naredba: id_token '=' L .
   29 E: L . '[' E ']'

    '['  shift, and go to state 38

    $default  reduce using rule 12 (Naredba)


State 46

   28 E: '(' E ')' .

    $default  reduce using rule 28 (E)


State 47

   34 Lista_brojeva: Lista_brojeva ',' . E

    broj_token  shift, and go to state 4
    id_token    shift, and go to state 18
    '-'         shift, and go to state 6
    '~'         shift, and go to state 7
    '('         shift, and go to state 8
    '['         shift, and go to state 9

    E  go to state 69
    L  go to state 20


State 48

   32 L: '[' Lista_brojeva ']' .

    $default  reduce using rule 32 (L)


State 49

    1 Program: Naredba ';' Program .

    $default  reduce using rule 1 (Program)


State 50

   13 Naredba: E eq_token E .
   17 E: E . '+' E
   18  | E . '-' E
   19  | E . '*' E
   20  | E . '/' E
   21  | E . '^' E
   23  | E . shl_token E
   24  | E . shr_token E
   25  | E . '&' E
   26  | E . '|' E

    shr_token  shift, and go to state 29
    shl_token  shift, and go to state 30
    '|'        shift, and go to state 31
    '^'        shift, and go to state 32
    '&'        shift, and go to state 33
    '+'        shift, and go to state 34
    '-'        shift, and go to state 35
    '*'        shift, and go to state 36
    '/'        shift, and go to state 37

    $default  reduce using rule 13 (Naredba)


State 51

   14 Naredba: E neq_token E .
   17 E: E . '+' E
   18  | E . '-' E
   19  | E . '*' E
   20  | E . '/' E
   21  | E . '^' E
   23  | E . shl_token E
   24  | E . shr_token E
   25  | E . '&' E
   26  | E . '|' E

    shr_token  shift, and go to state 29
    shl_token  shift, and go to state 30
    '|'        shift, and go to state 31
    '^'        shift, and go to state 32
    '&'        shift, and go to state 33
    '+'        shift, and go to state 34
    '-'        shift, and go to state 35
    '*'        shift, and go to state 36
    '/'        shift, and go to state 37

    $default  reduce using rule 14 (Naredba)


State 52

   17 E: E . '+' E
   18  | E . '-' E
   19  | E . '*' E
   20  | E . '/' E
   21  | E . '^' E
   23  | E . shl_token E
   24  | E . shr_token E
   24  | E shr_token E .
   25  | E . '&' E
   26  | E . '|' E

    '+'  shift, and go to state 34
    '-'  shift, and go to state 35
    '*'  shift, and go to state 36
    '/'  shift, and go to state 37

    $default  reduce using rule 24 (E)


State 53

   17 E: E . '+' E
   18  | E . '-' E
   19  | E . '*' E
   20  | E . '/' E
   21  | E . '^' E
   23  | E . shl_token E
   23  | E shl_token E .
   24  | E . shr_token E
   25  | E . '&' E
   26  | E . '|' E

    '+'  shift, and go to state 34
    '-'  shift, and go to state 35
    '*'  shift, and go to state 36
    '/'  shift, and go to state 37

    $default  reduce using rule 23 (E)


State 54

   17 E: E . '+' E
   18  | E . '-' E
   19  | E . '*' E
   20  | E . '/' E
   21  | E . '^' E
   23  | E . shl_token E
   24  | E . shr_token E
   25  | E . '&' E
   26  | E . '|' E
   26  | E '|' E .

    shr_token  shift, and go to state 29
    shl_token  shift, and go to state 30
    '^'        shift, and go to state 32
    '&'        shift, and go to state 33
    '+'        shift, and go to state 34
    '-'        shift, and go to state 35
    '*'        shift, and go to state 36
    '/'        shift, and go to state 37

    $default  reduce using rule 26 (E)


State 55

   17 E: E . '+' E
   18  | E . '-' E
   19  | E . '*' E
   20  | E . '/' E
   21  | E . '^' E
   21  | E '^' E .
   23  | E . shl_token E
   24  | E . shr_token E
   25  | E . '&' E
   26  | E . '|' E

    shr_token  shift, and go to state 29
    shl_token  shift, and go to state 30
    '&'        shift, and go to state 33
    '+'        shift, and go to state 34
    '-'        shift, and go to state 35
    '*'        shift, and go to state 36
    '/'        shift, and go to state 37

    $default  reduce using rule 21 (E)


State 56

   17 E: E . '+' E
   18  | E . '-' E
   19  | E . '*' E
   20  | E . '/' E
   21  | E . '^' E
   23  | E . shl_token E
   24  | E . shr_token E
   25  | E . '&' E
   25  | E '&' E .
   26  | E . '|' E

    shr_token  shift, and go to state 29
    shl_token  shift, and go to state 30
    '+'        shift, and go to state 34
    '-'        shift, and go to state 35
    '*'        shift, and go to state 36
    '/'        shift, and go to state 37

    $default  reduce using rule 25 (E)


State 57

   17 E: E . '+' E
   17  | E '+' E .
   18  | E . '-' E
   19  | E . '*' E
   20  | E . '/' E
   21  | E . '^' E
   23  | E . shl_token E
   24  | E . shr_token E
   25  | E . '&' E
   26  | E . '|' E

    '*'  shift, and go to state 36
    '/'  shift, and go to state 37

    $default  reduce using rule 17 (E)


State 58

   17 E: E . '+' E
   18  | E . '-' E
   18  | E '-' E .
   19  | E . '*' E
   20  | E . '/' E
   21  | E . '^' E
   23  | E . shl_token E
   24  | E . shr_token E
   25  | E . '&' E
   26  | E . '|' E

    '*'  shift, and go to state 36
    '/'  shift, and go to state 37

    $default  reduce using rule 18 (E)


State 59

   17 E: E . '+' E
   18  | E . '-' E
   19  | E . '*' E
   19  | E '*' E .
   20  | E . '/' E
   21  | E . '^' E
   23  | E . shl_token E
   24  | E . shr_token E
   25  | E . '&' E
   26  | E . '|' E

    $default  reduce using rule 19 (E)


State 60

   17 E: E . '+' E
   18  | E . '-' E
   19  | E . '*' E
   20  | E . '/' E
   20  | E '/' E .
   21  | E . '^' E
   23  | E . shl_token E
   24  | E . shr_token E
   25  | E . '&' E
   26  | E . '|' E

    $default  reduce using rule 20 (E)


State 61

   17 E: E . '+' E
   18  | E . '-' E
   19  | E . '*' E
   20  | E . '/' E
   21  | E . '^' E
   23  | E . shl_token E
   24  | E . shr_token E
   25  | E . '&' E
   26  | E . '|' E
   29  | L '[' E . ']'

    shr_token  shift, and go to state 29
    shl_token  shift, and go to state 30
    '|'        shift, and go to state 31
    '^'        shift, and go to state 32
    '&'        shift, and go to state 33
    '+'        shift, and go to state 34
    '-'        shift, and go to state 35
    '*'        shift, and go to state 36
    '/'        shift, and go to state 37
    ']'        shift, and go to state 70


State 62

    4 Naredba: print_token '(' id_token ')' .

    $default  reduce using rule 4 (Naredba)


State 63

    3 Naredba: print_token '(' E ',' . broj_token ')'

    broj_token  shift, and go to state 71


State 64

    5 Naredba: print_token '(' E ')' .

    $default  reduce using rule 5 (Naredba)


State 65

    6 Naredba: print_token '(' L ')' .

    $default  reduce using rule 6 (Naredba)


State 66

    7 Naredba: int_token id_token '=' E .
   17 E: E . '+' E
   18  | E . '-' E
   19  | E . '*' E
   20  | E . '/' E
   21  | E . '^' E
   23  | E . shl_token E
   24  | E . shr_token E
   25  | E . '&' E
   26  | E . '|' E

    shr_token  shift, and go to state 29
    shl_token  shift, and go to state 30
    '|'        shift, and go to state 31
    '^'        shift, and go to state 32
    '&'        shift, and go to state 33
    '+'        shift, and go to state 34
    '-'        shift, and go to state 35
    '*'        shift, and go to state 36
    '/'        shift, and go to state 37

    $default  reduce using rule 7 (Naredba)


State 67

   33 L: id_token .

    $default  reduce using rule 33 (L)


State 68

    9 Naredba: list_token id_token '=' L .

    $default  reduce using rule 9 (Naredba)


State 69

   17 E: E . '+' E
   18  | E . '-' E
   19  | E . '*' E
   20  | E . '/' E
   21  | E . '^' E
   23  | E . shl_token E
   24  | E . shr_token E
   25  | E . '&' E
   26  | E . '|' E
   34 Lista_brojeva: Lista_brojeva ',' E .

    shr_token  shift, and go to state 29
    shl_token  shift, and go to state 30
    '|'        shift, and go to state 31
    '^'        shift, and go to state 32
    '&'        shift, and go to state 33
    '+'        shift, and go to state 34
    '-'        shift, and go to state 35
    '*'        shift, and go to state 36
    '/'        shift, and go to state 37

    $default  reduce using rule 34 (Lista_brojeva)


State 70

   29 E: L '[' E ']' .

    $default  reduce using rule 29 (E)


State 71

    3 Naredba: print_token '(' E ',' broj_token . ')'

    ')'  shift, and go to state 72


State 72

    3 Naredba: print_token '(' E ',' broj_token ')' .

    $default  reduce using rule 3 (Naredba)
